fix: overflow mobile, navbar, drawer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -165,4 +165,10 @@ body {
     max-width: none !important;
   }
 
+  @media (max-width: 768px) {
+    .panel-content {
+      padding-bottom: 80px !important;
+    }
+  }
+
 }
